--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="des_text">비고</string>
     <string name="tag_text">태그</string>
     <string name="date_text">날짜</string>
+    <string name="input_text">수입</string>
+    <string name="output_text">지출</string>
 </resources>
